# grc

./: .gitignore  CMakeLists.txt  README.md  _setup.cfg  _setup.py  note.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
blocks/: options.block.yml
core/: Config.py  FlowGraph.py  platform.py  workflow.py
core/blocks/: options.py
core/generator/: Generator.py
grc/: README.md  grc.conf.in
grc/blocks/: options.block.yml
grc/core/: Config.py  FlowGraph.py  workflow.py
grc/core/blocks/: options.py
grc/gui_qt/: Config.py
grc/gui_qt/components/: executor.py
grc/tests/: .gitignore  test_block_flags.py  test_qtbot.py
grc/tests/resources/: test_cpp.grc  test_cpp_nogui_workflow.grc  test_python_bokeh_gui_workflow.grc  test_python_bokeh_gui_workflow.py
grc/tests/resources/test_cpp_hb_qt_gui_workflow/: CMakeLists.txt  test_cpp_hb_qt_gui_workflow.cpp
grc/workflows/: CMakeLists.txt
grc/workflows/cpp_hb_nogui/: cpp_hb_nogui.workflow.yml
grc/workflows/cpp_hb_qt_gui/: cpp_hb_qt_gui.workflow.yml
grc/workflows/cpp_nogui/: cpp_nogui.workflow.yml
grc/workflows/cpp_qt_gui/: cpp_qt_gui.workflow.yml  flow_graph_qt_gui.cpp.mako
grc/workflows/python_bokeh_gui/: python_bokeh_gui.workflow.yml
grc/workflows/python_hb_nogui/: python_hb_nogui.workflow.yml
grc/workflows/python_hb_qt_gui/: python_hb_qt_gui.workflow.yml
grc/workflows/python_nogui/: python_nogui.workflow.yml
grc/workflows/python_qt_gui/: flow_graph_qt_gui.py.mako  python_qt_gui.workflow.yml
gui/: PropsDialog.py
gui_qt/: Config.py  Platform.py
gui_qt/components/: dialogs.py  param_widgets.py
gui_qt/components/canvas/: drawable.py  param.py
src/: CMakeLists.txt
src/gnuradio_companion/: CMakeLists.txt  __main__.py  gnuradio_companion.py  grcc.py  main.py
src/gnuradio_companion/blocks/: options.block.yml
src/gnuradio_companion/core/: Config.py  platform.py  workflow.py
src/gnuradio_companion/core/blocks/: _build.py  options.py
src/gnuradio_companion/core/generator/: BlockProxy.py  FlowGraphProxy.py  Generator.py  workflow.py
src/gnuradio_companion/gui_qt/: Config.py
src/gnuradio_companion/gui_qt/components/: dialogs.py  executor.py  window.py
src/gnuradio_companion/scripts/: CMakeLists.txt
src/gnuradio_companion/scripts/freedesktop/: CMakeLists.txt
src/gnuradio_companion/workflows/: cpp_hb_nogui.workflow.yml  cpp_hb_qt_gui.workflow.yml  cpp_nogui.workflow.yml  cpp_qt_gui.workflow.yml  python_bokeh_gui.workflow.yml  python_nogui.worflow.yml  python_nogui.workflow.yml
src/gnuradio_companion/workflows/cpp_hb_nogui/: CMakeLists.txt.mako  cpp_hb_nogui.workflow.yml  cpp_hier_block.py  cpp_top_block.py  flow_graph_hb_nogui.cpp.jinja  flow_graph_hb_nogui.hpp.jinja  flow_graph_hb_nogui.hpp.mako
src/gnuradio_companion/workflows/cpp_hb_qt_gui/: CMakeLists.txt.jinja  CMakeLists.txt.mako  cpp_hb_qt_gui.workflow.yml  cpp_top_block.py
src/gnuradio_companion/workflows/cpp_nogui/: CMakeLists.txt.mako  cpp_nogui.workflow.yml  cpp_top_block.py  flow_graph_nogui.cpp.jinja  flow_graph_nogui.hpp.jinja  flow_graph_nogui.hpp.mako
src/gnuradio_companion/workflows/cpp_qt_gui/: CMakeLists.txt.jinja  cpp_qt_gui.workflow.yml  cpp_top_block.py  flow_graph_qt_gui.cpp.jinja  flow_graph_qt_gui.hpp.jinja
src/gnuradio_companion/workflows/python_bokeh_gui/: flow_graph_bokeh_gui.py.jinja  python_bokeh_gui.workflow.yml  top_block.py
src/gnuradio_companion/workflows/python_hb_nogui/: flow_graph_hb_nogui.py.jinja  flow_graph_hb_nogui.py.mako  hier_block.py  python_hb_nogui.workflow.yml  top_block.py
src/gnuradio_companion/workflows/python_hb_qt_gui/: flow_graph_hb_qt_gui.py.jinja  python_hb_qt_gui.workflow.yml  top_block.py
src/gnuradio_companion/workflows/python_nogui/: flow_graph_nogui.py.jinja  python_nogui.workflow.yml  top_block.py
src/grc/: CMakeLists.txt  __init__.py  grc.conf.in  main.py
src/grc.egg-info/: PKG-INFO  SOURCES.txt
src/grc/core/: Config.py  platform.py
src/grc/core/blocks/: options.py
src/grc/gui/: Config.py  MainWindow.py
src/grc/gui_qt/: Config.py
tests/: .gitignore  test_block_templates.py  test_cheetah_converter.py  test_compiler.py  test_cpp.py  test_evaled_property.py  test_examples.py  test_expr_utils.py  test_generator.py  test_python.py  test_qtbot.py  test_xml_parser.py  test_yaml_checker.py
tests/resources/: test_compiler.grc  test_cpp.grc  test_cpp_hb_nogui_workflow.block.yml  test_cpp_hb_nogui_workflow.grc  test_cpp_hb_qt_gui_workflow.block.yml  test_cpp_hb_qt_gui_workflow.grc  test_cpp_jinja.grc  test_cpp_nogui_workflow.grc  test_cpp_qt_gui_workflow.grc  test_python_bokeh_gui_workflow.grc  test_python_hb_nogui_workflow.grc  test_python_hb_qt_gui_workflow.grc  test_python_jinja.grc  test_python_mako.grc  test_python_nogui_workflow.grc  test_python_nogui_workflow.py  test_python_qt_gui_workflow.grc  test_python_qt_gui_workflow.py  top_block.py
tests/resources/horn/: CMakeLists.txt  horn.cpp  horn.hpp
tests/resources/test_cpp_hb_nogui_workflow/: test_cpp_hb_nogui_workflow.hpp
tests/resources/test_cpp_hb_qt_gui_workflow/: test_cpp_hb_qt_gui_workflow.hpp
tests/resources/test_cpp_nogui_workflow/: CMakeLists.txt  test_cpp_nogui_workflow.cpp  test_cpp_nogui_workflow.hpp
tests/resources/test_cpp_qt_gui_workflow/: CMakeLists.txt  test_cpp_qt_gui_workflow.cpp  test_cpp_qt_gui_workflow.hpp
tests/resources/top_block/: CMakeLists.txt  top_block.cpp  top_block.hpp
workflows/: CMakeLists.txt  cpp_hb_qt_gui.workflow.yml  cpp_nogui.workflow.yml  python_hb_nogui.workflow.yml  python_hb_qt_gui.workflow.yml  python_qt_gui.workflow.yml
workflows/cpp_hb_qt_gui/: cpp_hier_block.py
workflows/cpp_nogui/: cpp_nogui.workflow.yml
workflows/cpp_qt_gui/: CMakeLists.txt.mako  cpp_qt_gui.workflow.yml  flow_graph_qt_gui.hpp.mako
workflows/python_bokeh_gui/: flow_graph_bokeh_gui.py.mako  python_bokeh_gui.workflow.yml
workflows/python_hb_qt_gui/: flow_graph_hb_qt_gui.py.mako  python_hb_qt_gui.workflow.yml
workflows/python_nogui/: flow_graph_nogui.py.mako
workflows/python_qt_gui/: flow_graph_qt_gui.py.mako  python_qt_gui.workflow.yml
(+19 files in other folders)
