[build-system]
requires = [
    "setuptools == 68.2.2", 
    "Mako >= 1.1.0",
#    "PyGObject >= 3.42.1",
#    "pycairo >= 1.0",
    "numpy",
    "jsonschema",
]
build-backend = "setuptools.build_meta"

[project]
name = "grc"
version = "3.10.0.0"
authors = [
  { name="Zaky Hermawan", email="zaky.hermawan9615@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ZakyHermawan/grc"
Issues = "https://github.com/ZakyHermawan/grc/issues"
