[metadata]
name = grc
version = 3.10.0.0
author = Zaky Hermawan
author_email = zaky.hermawan9615@gmail.com
description = Example Python package directory structure
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/ZakyHermawan/grc

[options]
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    grc = grc.main:main
    grcc = grc.compiler:main

[options.packages.find]
where = src

[options.package_data]
grc =
    gui/icon.png
    blocks/*.yml
    core/default_flow_graph.grc
    workflows/*/*.yml
