[metadata]
name = gnuradio_companion
version = 3.10.0.0
author = Zaky Hermawan
author_email = zaky.hermawan9615@gmail.com
description = Example Python package directory structure
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/ZakyHermawan/grc

[options]
packages = find:
package_dir =
    = src

[options.entry_points]
gui_scripts =
    gnuradio-companion = gnuradio_companion.gnuradio_companion:main
console_scripts =
    grcc = gnuradio_companion.grcc:main

[options.packages.find]
where = src

[options.package_data]
gnuradio_companion =
    blocks/*.yml
    converter/*.dtd
    core/default_flow_graph.grc
    core/generator/flow_graph.py.mako
    core/generator/cpp_templates/*.mako
    core/flow_graph.dtd
    gui/icon.png
    gui_qt/resources/data/*
    gui_qt/resources/language/en_US/LC_MESSAGES/*
    gui_qt/resources/language/*
    gui_qt/resources/logo/*
    gui_qt/resources/manifest/*
    gui_qt/resources/*
    workflows/cpp_hb_nogui/*
    workflows/cpp_hb_qt_gui/*
    workflows/cpp_nogui/*
    workflows/cpp_qt_gui/*
    workflows/python_bokeh_gui/*
    workflows/python_hb_nogui/*
    workflows/python_hb_qt_gui/*
    workflows/python_nogui/*
    workflows/python_qt_gui/*
